--- a/exercises/templates/exercises/share_result.html
+++ b/exercises/templates/exercises/share_result.html
@@ -1,12 +1,13 @@
 {% extends "core/base.html" %}
+{% load math_format %}
 
 {% block content %}
 <div class="container mt-5">
     <h2>Shared Result</h2>
-    <p><b>Task:</b> {{ share.attempt.problem.question_text }}</p>
+    <p><b>Task:</b> {% if share.attempt.problem.problem_type.slug == 'algebraic' %}<strong>Expand:</strong> {% endif %}{{ share.attempt.problem.question_text|pretty_expr }}</p>
     <p><b>User Answer:</b> {{ share.attempt.user_answer }}</p>
     <p><b>Correct:</b> {% if share.attempt.is_correct %} ✅ {% else %} ❌ {% endif %}</p>
-    <p><b>Time:</b> {{ share.attempt.time_taken_ms }} ms</p>
+    <p><b>Time:</b> {{ share.attempt.time_taken_ms|minutes }}</p>
     <hr>
     <p><i>Public link:</i> {{ request.build_absolute_uri }}</p>
 </div>
